<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nanodegreeApps">My Nano Degree Apps</string>
    <string name="nano_degree_apps">My Nano Degree Apps</string>
    <string name="my_own_app">Capstone: My Own App</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="library_app">Library App</string>
    <string name="scores_app">Scores App</string>
    <string name="spotify_streamer">Spotify Streamer</string>
</resources>
