<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/nano_degree_apps"
        android:textAppearance="?android:textAppearanceMedium" />

    <Button
        android:id="@+id/spotify_streamer_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/udacity"
        android:onClick="showToast"
        android:padding="5dp"
        android:text="@string/spotify_streamer" />

    <Button
        android:id="@+id/scores_app_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/udacity"
        android:onClick="showToast"
        android:padding="5dp"
        android:text="@string/scores_app" />

    <Button
        android:id="@+id/library_app_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/udacity"
        android:onClick="showToast"
        android:padding="5dp"
        android:text="@string/library_app" />

    <Button
        android:id="@+id/build_it_bigger_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/udacity"
        android:onClick="showToast"
        android:padding="5dp"
        android:text="@string/build_it_bigger" />

    <Button
        android:id="@+id/xyz_reader_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/udacity"
        android:onClick="showToast"
        android:padding="5dp"
        android:text="@string/xyz_reader" />

    <Button
        android:id="@+id/my_own_app_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/red"
        android:onClick="showToast"
        android:padding="5dp"
        android:textColor="@color/white"
        android:text="@string/my_own_app" />

</LinearLayout>
